Fixed freezing when launching qBit.